--- a/PongJS/pong.css
+++ b/PongJS/pong.css
@@ -1,10 +1,31 @@
 body{
     background-color:black;
     color:white;
+
+    justify-content: center; 
 }
 
 .clearfix {
     clear: both;
+}
+
+.title {
+    width:100%;
+
+    /* Firefox */
+    display:-moz-box;
+    -moz-box-pack:center;
+    -moz-box-align:center;
+
+    /* Safari and Chrome */
+    display:-webkit-box;
+    -webkit-box-pack:center;
+    -webkit-box-align:center;
+
+    /* W3C */
+    display:box;
+    box-pack:center;
+    box-align:center;
 }
 
 .center {
@@ -26,3 +47,70 @@ body{
     box-align:center;
 }
 
+.PongCan {
+    width:100%;
+    height:480px;
+
+    /* Firefox */
+    display:-moz-box;
+    -moz-box-pack:center;
+    -moz-box-align:center;
+
+    /* Safari and Chrome */
+    display:-webkit-box;
+    -webkit-box-pack:center;
+    -webkit-box-align:center;
+
+    /* W3C */
+    display:box;
+    box-pack:center;
+    box-align:center;
+}
+
+.text {
+    width:100%;
+
+    /* Firefox */
+    display:-moz-box;
+    -moz-box-pack:center;
+    -moz-box-align:center;
+    -moz-box-orient: vertical;
+
+    /* Safari and Chrome */
+    display:-webkit-box;
+    -webkit-box-pack:center;
+    -webkit-box-align:center;
+    -webkit-box-orient: vertical; 
+
+
+    /* W3C */
+    display:box;
+    box-pack:center;
+    box-align:center;
+    box-orient: vertical;
+
+}
+
+.text p {
+    width:720px;
+
+    /* Firefox */
+    display:-moz-box;
+    -moz-box-pack:center;
+    -moz-box-align:center;
+    -moz-box-orient: vertical;
+
+    /* Safari and Chrome */
+    display:-webkit-box;
+    -webkit-box-pack:center;
+    -webkit-box-align:center;
+    -webkit-box-orient: vertical; 
+
+
+    /* W3C */
+    display:box;
+    box-pack:center;
+    box-align:center;
+    box-orient: vertical;
+
+}
